# NovaOS

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: novaos-validation.yml
abi/boot/: nova_bootinfo_v1.h  nova_bootinfo_v1.md  nova_bootinfo_v2.h  nova_bootinfo_v2.md  nova_image_digest_v1.h  nova_image_digest_v1.md  nova_verification_v1.h  nova_verification_v1.md
abi/capsule/: nova_init_capsule_v1.h  nova_init_capsule_v1.md
abi/payload/: nova_payload_v1.h  nova_payload_v1.md
abi/syscall/: nova_syscall_v1.h  nova_syscall_v1.md
apps/initd/: Cargo.toml  link.ld
apps/initd/src/: lib.rs  runtime.rs  tests.rs
artifacts/reports/: README.md
boot/common/: README.md
boot/efi-aa64/novaaa64/: Cargo.toml
boot/efi-aa64/novaaa64/src/: bootinfo.rs  main.rs
boot/efi-aa64/spark-observe/: Cargo.toml
boot/efi-aa64/spark-observe/src/: main.rs  report.rs
boot/mkimage/: Cargo.toml
boot/mkimage/src/: main.rs
boot/observatory/pc/: README.md
boot/observatory/spark/: README.md
boot/stage1/: Cargo.toml
boot/stage1/src/: bootinfo.rs  handoff.rs  lib.rs
boot/uefi/: README.md
ci/: validate-local.sh  validate-report.sh
ci/systemd/: novaos-validation.service  novaos-validation.service.in
docs/: references.md
docs/adr/: 0001-spark-scope.md  0002-portable-fabric.md
docs/architecture/: app-bridge.md  policy-model.md  portable-fabric.md  scene-model.md  service-graph.md
docs/boot/: bootinfo-v1.md  bootinfo-v2.md  init-capsule-v1.md  spark-uefi-bringup.md
docs/kernel/: raw-kernel-entry.md  syscall-abi.md
docs/platform/: spark-observatory.md
docs/roadmap/: START-HERE.md  live-status.md  m0-acceptance-2026-03-30.md  m0-m2.md  m1-progress-2026-03-30.md  master-roadmap-checklist.md
drivers/bus/pci/: Cargo.toml
drivers/bus/pci/src/: lib.rs
drivers/gpu/nvidia/common/: README.md
drivers/gpu/nvidia/gb10/: README.md
drivers/gpu/nvidia/hopper_fabric/: README.md
drivers/gpu/nvidia/rtx_pcie/: README.md
kernel/arch/arm64/: Cargo.toml
kernel/arch/arm64/src/: bootinfo.rs  console.rs  lib.rs  mm.rs  panic.rs  syscall.rs  tests.rs  trace.rs
kernel/arch/arm64/src/arch/arm64/: allocator.rs  exceptions.rs  mmu.rs  mod.rs
kernel/arch/arm64/src/boot_contract/: mod.rs
kernel/arch/arm64/src/bootstrap/: mod.rs
kernel/arch/arm64/src/bringup/: mod.rs
kernel/arch/arm64/src/diag/: mod.rs
kernel/arch/arm64/src/el/: mod.rs
kernel/arch/arm64/src/exception_runtime/: mod.rs
kernel/arch/x86_64/: Cargo.toml
kernel/arch/x86_64/src/: lib.rs
libs/nova_fabric/: Cargo.toml
libs/nova_fabric/src/: lib.rs
libs/nova_rt/: Cargo.toml
libs/nova_rt/src/: bootinfo.rs  bootinfo_v2.rs  bootstrap_task.rs  digest.rs  init_capsule.rs  lib.rs  payload.rs  service.rs  syscall.rs  verification.rs
platform/hopper_lab/: README.md
platform/pc_workstation/: README.md
platform/spark/: README.md
scripts/: build-efi.sh  build-init-capsule.sh  build-initd.sh  build-kernel.sh  build-policyd.sh  build-service-payload.sh  check-novaaa64-loader-report.sh  check-spark-stage-chain-proof.sh  collect-novaaa64-loader-report.sh  collect-spark-observe-report.sh  compare-spark-observe-reports.sh  complete-spark-hardware-proof.sh  finalize-spark-hardware-proof.sh  install-novaos-user-service.sh  install-spark-hardware-bundle.sh  novaos-ci-loop.sh  novaos-env-check.sh  novaos-latest.sh  novaos-report.sh  prepare-spark-hardware-bundle.sh  run-qemu-novaaa64-bootstrap-el0-diagnostic.sh  run-qemu-novaaa64-bootstrap-kernel-svc-diagnostic.sh  run-qemu-novaaa64-bootstrap-pretransfer-svc-diagnostic.sh  run-qemu-novaaa64-bootstrap-svc-diagnostic.sh  run-qemu-novaaa64-bootstrap-trap-diagnostic.sh  run-qemu-novaaa64.sh  run-qemu-spark-observe.sh  update-roadmap-status.sh  validate-payloads.sh
services/acceld/: Cargo.toml
services/acceld/src/: dispatch.rs  launch.rs  lib.rs
services/acceld/src/backends/: cpu.rs  gb10.rs  hopper.rs  mod.rs  rtx.rs
services/agentd/: Cargo.toml
services/agentd/src/: launch.rs  lib.rs  tests.rs  types.rs
services/appbridged/: Cargo.toml
services/appbridged/src/: launch.rs  lib.rs  tests.rs  types.rs
services/intentd/: Cargo.toml
services/intentd/src/: launch.rs  lib.rs  tests.rs  types.rs
services/memd/: Cargo.toml
services/memd/src/: launch.rs  lib.rs  placement.rs
services/memd/src/profiles/: discrete.rs  mig.rs  mod.rs  nvlink.rs  uma.rs
services/policyd/: Cargo.toml
services/policyd/src/: launch.rs  lib.rs  tests.rs  types.rs
services/scened/: Cargo.toml
services/scened/src/: launch.rs  lib.rs  tests.rs  types.rs
services/shelld/: Cargo.toml
services/shelld/src/: launch.rs  lib.rs  tests.rs  types.rs
toolchain/: novaos-prereqs.env  novaos-prereqs.sh
