[package]
name = "novaos-initd"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "initd-payload"
path = "src/bin/initd_payload.rs"

[[bin]]
name = "initd-runtime"
path = "src/bin/initd_runtime.rs"

[features]
default = []
qemu_virt_trace = []
qemu_semihosting = []
bootstrap_trap_probe = []
bootstrap_svc_probe = []
bootstrap_el0_probe = []

[dependencies]
nova_rt = { path = "../../libs/nova_rt" }
novaos-acceld = { path = "../../services/acceld" }
novaos-agentd = { path = "../../services/agentd" }
novaos-appbridged = { path = "../../services/appbridged" }
novaos-intentd = { path = "../../services/intentd" }
novaos-memd = { path = "../../services/memd" }
novaos-policyd = { path = "../../services/policyd" }
novaos-scened = { path = "../../services/scened" }
novaos-shelld = { path = "../../services/shelld" }
