[package]
name = "novaos-acceld"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "acceld-payload"
path = "src/bin/acceld_payload.rs"

[dependencies]
nova_fabric = { path = "../../libs/nova_fabric" }
nova_rt = { path = "../../libs/nova_rt" }
