[package]
name = "novaos-shelld"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nova_fabric = { path = "../../libs/nova_fabric" }
novaos-acceld = { path = "../acceld" }
novaos-memd = { path = "../memd" }
nova_rt = { path = "../../libs/nova_rt" }
