[package]
name = "novaos-shelld"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "shelld-payload"
path = "src/bin/shelld_payload.rs"

[dependencies]
nova_fabric = { path = "../../libs/nova_fabric" }
novaos-acceld = { path = "../acceld" }
novaos-intentd = { path = "../intentd" }
novaos-memd = { path = "../memd" }
nova_rt = { path = "../../libs/nova_rt" }
