[package]
name = "novaaa64"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nova_fabric = { path = "../../../libs/nova_fabric" }
nova_rt = { path = "../../../libs/nova_rt" }
novaos-stage1 = { path = "../../stage1" }
uefi = { version = "0.35.0", default-features = false, features = ["alloc", "global_allocator", "logger", "panic_handler"] }

[features]
default = []
qemu_virt_trace = []
