[package]
name = "spark-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nova_fabric = { path = "../../../libs/nova_fabric" }
uefi = { version = "0.35.0", default-features = false, features = ["alloc", "global_allocator", "logger", "panic_handler"] }
