[package]
name = "novaos-kernel"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "kernel-payload"
path = "src/bin/kernel_payload.rs"

[dependencies]
nova_rt = { path = "../../../libs/nova_rt" }

[features]
default = []
qemu_virt_trace = []
qemu_semihosting = []
bootstrap_trap_vector_trace = []
bootstrap_kernel_svc_probe = []
bootstrap_pretransfer_svc_probe = []
